--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,13 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
 
     //Test
-    dependencies { testImplementation "org.mockito:mockito-core:3.+" }
+    //Mockito
+    testImplementation "org.mockito:mockito-core:2.25.1"
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
+        exclude group: 'org.jetbrains.kotlin'
+        exclude group: 'org.mockito'
+    }
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation 'androidx.test.ext:junit:1.1.2'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
